@@ -4,9 +4,10 @@
 \alias{plotROCRCurves}
 \title{Visualize binary classification predictions via ROCR ROC curves.}
 \usage{
-plotROCRCurves(obj, meas1 = "tpr", meas2 = "fpr", avg = "threshold",
-  cols = NULL, ltys = NULL, add.legend = NULL, add.diag = TRUE,
-  perf.args = list(), legend.args = list(), task.id = NULL)
+plotROCRCurves(obj, meas1 = "tpr", meas2 = "fpr", avg = "none",
+  cols = NULL, ltys = NULL, add.legend = NULL, add.diag = NULL,
+  perf.args = list(), plot.args = list(), legend.args = list(),
+  task.id = NULL)
 }
 \arguments{
 \item{obj}{[(list of) \code{\link{Prediction}} | (list of) \code{\link{ResampleResult}} | \code{\link{BenchmarkResult}}]\cr
@@ -25,7 +26,9 @@ Default is \dQuote{fpr}.}
 
 \item{avg}{[\code{character(1)}]\cr
 How to average results from resampling.
-Default is \dQuote{threshold}.}
+Default is \dQuote{none} when \code{obj} is a (list of) prediction objects and
+\dQuote{threshold} when \code{obj} is a (list of) \code{ResamplePrediction} or \code{BenchmarkResult}.
+For more details see \code{\link[ROCR]{plot-methods}}.}
 
 \item{cols}{[\code{character}]\cr
 Colors of curves. Single strings are replicated to desired length.
@@ -41,11 +44,15 @@ Default is \code{TRUE} if more than one ROC curve is drawn.}
 
 \item{add.diag}{[\code{logical(1)}]\cr
 Add main diagonal to plot via \code{\link{abline}}?
-Default is \code{TRUE}.}
+Default is \code{FALSE} unless \code{meas1 = "tpr"} and \code{meas2 = "fpr"}.}
 
 \item{perf.args}{[named \code{list}]\cr
 Further arguments passed to ROCR's \code{\link[ROCR]{performance}}.
 Usually not needed and \code{meas1} and \code{meas2} are set internally.
+Default is an empty list.}
+
+\item{plot.args}{[named \code{list}]\cr
+Further arguments passed to ROCR's code{\link[ROCR]{plot-methods}}.
 Default is an empty list.}
 
 \item{legend.args}{[named \code{list}]\cr
@@ -62,7 +69,7 @@ Default is first task.}
 [\code{invisible(NULL)}].
 }
 \description{
-Plot is generated by calling \code{\link{asROCRPrediction}},
+Plot is generated by calling \code{asROCRPrediction},
 ROCR's \code{\link[ROCR]{performance}},
 then ROCR's \code{plot} function.
 
