@@ -10,6 +10,12 @@ mlr_2.4:
 - add missings properties to all ctree and cforest methods:
   regr/classif for ctree, regr/classif/surv for cforest, and regr/classif for blackboost
 - update on learners: added sparseLDA and removed xgboost
+- new defaults for plotROCRCurves
+-- avg and add.diag set depending on inputs
+-- fill set to NULL by default
+-- bty (box around legend) set to "n" by default
+- ylim bug for plotROCRCurves fixed
+- can now pass arguments to ROCR::plot via plot.args
 
 mlr_2.3:
 - resample now returns an object of class ResampleResult (downward compatible)
